--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(Register_App VERSION 0.3 LANGUAGES CXX)
+project(Register_App VERSION 0.4 LANGUAGES CXX)
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -37,6 +37,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         icons.qrc
+        settings.h settings.cpp settings.ui
+        register_files.h register_files.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Register_App APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
